Created List view for files in dashboard & added options for uploading and deleting files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/vr3n/Installs/Zash/bin/python"
+    "python.pythonPath": "/home/vr3n/Installs/Zash/bin/python",
+    "workbench.iconTheme": "vscode-icons"
 }
